--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-/* body {
+body {
   background-image: url("https://external-preview.redd.it/3Xfn9HCVd5frs24U4Z0XMQ7B2vexrajX4LBzWdHXhPc.png?auto=webp&s=e154fef354eab91c7250228076b3f0b268f149a1");
-} */
+}
 
-/* .app {
+.app {
   color: white;
-} */
+}
