--- a/src/UI/Navbar.css
+++ b/src/UI/Navbar.css
@@ -1,17 +1,17 @@
 .navbar {
-  position: sticky;
+  position: fixed;
   top: 0;
   width: 100%;
   padding: 20px;
   display: flex;
-  z-index: 1;
+  z-index: 100;
   justify-content: space-around;
   height: 40px;
   align-items: center;
   color: white;
   transition-timing-function: ease-in;
   transition: all 0.5s;
-  background-color: #111;
+  background-color: #00101a;
   opacity: 0.93;
 }
 
@@ -44,6 +44,10 @@
 .active {
   color: white;
   text-decoration: none;
-  border-bottom: 1px solid white;
+  border-bottom: 0.5px solid lightslategray;
   padding-bottom: 4px;
+}
+
+.navbar__resume {
+  text-decoration: none;
 }
