--- a/src/UI/Navbar.css
+++ b/src/UI/Navbar.css
@@ -42,8 +42,10 @@
 }
 
 .active {
-  color: white;
+  color: #ad1a1d;
   text-decoration: none;
+  font-size: 14px;
+  font-weight: 600;
   border-bottom: 0.5px solid lightslategray;
   padding-bottom: 4px;
 }
