--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -8,21 +8,27 @@
 .home__title {
   display: flex;
   flex-direction: column;
-  /* transition: transform 3s; */
 }
 
 .home__title1 {
   font-size: 100px;
   font-weight: 700;
   line-height: 100px;
+}
+
+.home__titleText1 {
   transition-timing-function: ease-in;
-  transition: all 2s;
+  transition: all 150ms;
+}
+
+.home__titleText2 {
+  transition-timing-function: ease-in;
+  transition: all 150ms;
 }
 
 .home__title2 {
   font-size: 70px;
   font-weight: 600;
-  transition: all 3s;
 }
 
 .home__title3 {
@@ -30,8 +36,7 @@
 }
 
 .home__titleText1:hover {
-  /* transform: scale(1.4); */
-  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
   color: red;
 }
 
