--- a/src/UI/Navbar.css
+++ b/src/UI/Navbar.css
@@ -59,3 +59,15 @@
   margin-left: 20px;
   margin-right: 20px;
 }
+
+.navbar__resumeButton {
+  background-color: #000000 !important;
+  color: #ad1a1d !important;
+  height: 37px !important;
+  border: 1px solid #ad1a1d !important;
+}
+
+.navbar__resumeButton:hover {
+  background-color: #ad1a1d !important;
+  color: #000000 !important;
+}
