--- a/src/Components/Contact/Map.css
+++ b/src/Components/Contact/Map.css
@@ -1,6 +1,7 @@
 .map {
-  height: 520px;
+  height: 100%;
   background-color: black;
+  width: 100%;
   /* padding: 1rem; */
   border-radius: 20px;
   margin-top: 18px;
@@ -11,4 +12,8 @@
 .map .leaflet-container {
   height: 100%;
   border-radius: 12px;
+  z-index: 1;
+}
+
+.map__popup {
 }
